--- a/shop-smart-app/package.json
+++ b/shop-smart-app/package.json
@@ -12,6 +12,7 @@
     "api": "cd api && venv/bin/flask run --no-debugger"
   },
   "dependencies": {
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
