--- a/shop-smart-app/package.json
+++ b/shop-smart-app/package.json
@@ -12,8 +12,10 @@
     "api": "cd api && venv/bin/flask run --no-debugger"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
   },
