--- a/shop-smart-app/package.json
+++ b/shop-smart-app/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "npm run api & npm run dev",
+    "start": "npm run api && npm run dev",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp static.json dist/static.json",
     "lint": "eslint .",
     "preview": "vite preview",
     "api": "cd api && venv/bin/flask run --no-debugger"
